--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -78,7 +78,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\33646\\AppData\\Local\\Temp\\ipykernel_33104\\168661518.py:6: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "C:\\Users\\33646\\AppData\\Local\\Temp\\ipykernel_33104\\829312071.py:6: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
             "  test_idx = torch.tensor(np.logical_not(train_idx)).to(bool).to(device)\n"
           ]
         }
@@ -115,19 +115,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 11,
       "metadata": {
         "id": "erC5X1k6NHjh"
       },
       "outputs": [],
       "source": [
         "Lsym = compute_Lsym(A)\n",
-        "Lsym = torch.from_numpy(Lsym).float().to(device)"
+        "Lsym = torch.from_numpy(Lsym).float().to(device) + torch.eye(A.shape[0]).to(device)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 12,
       "metadata": {
         "id": "vmsuqARsNHjh"
       },
@@ -146,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -154,7 +154,30 @@
         "id": "Mo0MZ4PQNHji",
         "outputId": "ee96cdcb-22f2-4a8d-b339-048dd3fb873d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch: 01, Loss: 2.2706, Train: 17.17%, Test: 14.67%\n",
+            "Epoch: 02, Loss: 2.0628, Train: 26.52%, Test: 18.25%\n"
+          ]
+        },
+        {
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[13], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m accuracy_dict[\u001b[39m'\u001b[39m\u001b[39mLsym\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m []\n\u001b[0;32m     12\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m \u001b[39m+\u001b[39m args[\u001b[39m\"\u001b[39m\u001b[39mepochs\u001b[39m\u001b[39m\"\u001b[39m]):\n\u001b[1;32m---> 13\u001b[0m   loss \u001b[39m=\u001b[39m train(model, data, train_idx, args[\u001b[39m'\u001b[39;49m\u001b[39mtrans_matrix\u001b[39;49m\u001b[39m'\u001b[39;49m], optimizer, loss_fn)\n\u001b[0;32m     14\u001b[0m   train_acc, test_acc \u001b[39m=\u001b[39m test(model, data, train_idx, test_idx, args[\u001b[39m'\u001b[39m\u001b[39mtrans_matrix\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     16\u001b[0m   accuracy_dict[\u001b[39m'\u001b[39m\u001b[39mLsym\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mappend(test_acc)\n",
+            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\Graph-Diffusion-Convolution\\utils.py:8\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(model, data, train_idx, adj_t, optimizer, loss_fn)\u001b[0m\n\u001b[0;32m      5\u001b[0m model\u001b[39m.\u001b[39mtrain()\n\u001b[0;32m      7\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m----> 8\u001b[0m out \u001b[39m=\u001b[39m model(data\u001b[39m.\u001b[39;49mx, adj_t)\n\u001b[0;32m      9\u001b[0m loss \u001b[39m=\u001b[39m loss_fn(out[train_idx], data\u001b[39m.\u001b[39my[train_idx]\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m))\n\u001b[0;32m     10\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n",
+            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch\\nn\\modules\\module.py:1194\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m   1190\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1191\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1192\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1193\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1194\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39m\u001b[39minput\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   1195\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1196\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\Graph-Diffusion-Convolution\\models.py:41\u001b[0m, in \u001b[0;36mGCN_Classifier.forward\u001b[1;34m(self, x, transition_matrix)\u001b[0m\n\u001b[0;32m     38\u001b[0m     z \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mReLU(z)\n\u001b[0;32m     39\u001b[0m     z \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdropout(z)\n\u001b[1;32m---> 41\u001b[0m z \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49msparse\u001b[39m.\u001b[39;49mmm(transition_matrix, z)\n\u001b[0;32m     42\u001b[0m z \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclf(z)\n\u001b[0;32m     44\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreturn_embeds:\n",
+            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ],
       "source": [
         "model = GCN_Classifier(input_dim=dataset.num_features,\n",
         "                       hidden_dim=args['hidden_dim'],\n",
@@ -188,7 +211,7 @@
       "source": [
         "Lrw = compute_Lrw(A)\n",
         "Lrw = torch.from_numpy(Lrw).float().to(device)\n",
-        "args['trans_matrix'] = Lrw"
+        "args['trans_matrix'] = Lrw + torch.eye(A.shape[0]).to(device)"
       ]
     },
     {
@@ -235,27 +258,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "Owm4IW40NHjl"
       },
-      "outputs": [
-        {
-          "ename": "AttributeError",
-          "evalue": "'NoneType' object has no attribute 'dim'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[8], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m gdc \u001b[39m=\u001b[39m GDC(diffusion_kwargs \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(method\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mppr\u001b[39m\u001b[39m'\u001b[39m, alpha\u001b[39m=\u001b[39m\u001b[39m0.15\u001b[39m))\n\u001b[0;32m      5\u001b[0m edge_weight \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mones(data\u001b[39m.\u001b[39medge_index\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m])\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m----> 6\u001b[0m edge_index, edge_weight \u001b[39m=\u001b[39m gdc\u001b[39m.\u001b[39;49mtransition_matrix(edge_index\u001b[39m=\u001b[39;49mdata\u001b[39m.\u001b[39;49medge_index, edge_weight\u001b[39m=\u001b[39;49mdata\u001b[39m.\u001b[39;49medge_weight,\n\u001b[0;32m      7\u001b[0m                                                 num_nodes\u001b[39m=\u001b[39;49mdata\u001b[39m.\u001b[39;49mnum_nodes, normalization\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39msym\u001b[39;49m\u001b[39m'\u001b[39;49m)    \n\u001b[0;32m      9\u001b[0m trans_matrix \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros((data\u001b[39m.\u001b[39mnum_nodes, data\u001b[39m.\u001b[39mnum_nodes))\u001b[39m.\u001b[39mto(device)\n\u001b[0;32m     10\u001b[0m trans_matrix[edge_index[\u001b[39m0\u001b[39m], edge_index[\u001b[39m1\u001b[39m]] \u001b[39m=\u001b[39m edge_weight\n",
-            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch_geometric\\transforms\\gdc.py:165\u001b[0m, in \u001b[0;36mGDC.transition_matrix\u001b[1;34m(self, edge_index, edge_weight, num_nodes, normalization)\u001b[0m\n\u001b[0;32m    163\u001b[0m \u001b[39mif\u001b[39;00m normalization \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39msym\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m    164\u001b[0m     row, col \u001b[39m=\u001b[39m edge_index\n\u001b[1;32m--> 165\u001b[0m     deg \u001b[39m=\u001b[39m scatter_add(edge_weight, col, dim\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m, dim_size\u001b[39m=\u001b[39;49mnum_nodes)\n\u001b[0;32m    166\u001b[0m     deg_inv_sqrt \u001b[39m=\u001b[39m deg\u001b[39m.\u001b[39mpow(\u001b[39m-\u001b[39m\u001b[39m0.5\u001b[39m)\n\u001b[0;32m    167\u001b[0m     deg_inv_sqrt[deg_inv_sqrt \u001b[39m==\u001b[39m \u001b[39mfloat\u001b[39m(\u001b[39m'\u001b[39m\u001b[39minf\u001b[39m\u001b[39m'\u001b[39m)] \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
-            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch_scatter\\scatter.py:29\u001b[0m, in \u001b[0;36mscatter_add\u001b[1;34m(src, index, dim, out, dim_size)\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mscatter_add\u001b[39m(src: torch\u001b[39m.\u001b[39mTensor, index: torch\u001b[39m.\u001b[39mTensor, dim: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[0;32m     27\u001b[0m                 out: Optional[torch\u001b[39m.\u001b[39mTensor] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m     28\u001b[0m                 dim_size: Optional[\u001b[39mint\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m torch\u001b[39m.\u001b[39mTensor:\n\u001b[1;32m---> 29\u001b[0m     \u001b[39mreturn\u001b[39;00m scatter_sum(src, index, dim, out, dim_size)\n",
-            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch_scatter\\scatter.py:11\u001b[0m, in \u001b[0;36mscatter_sum\u001b[1;34m(src, index, dim, out, dim_size)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mscatter_sum\u001b[39m(src: torch\u001b[39m.\u001b[39mTensor, index: torch\u001b[39m.\u001b[39mTensor, dim: \u001b[39mint\u001b[39m \u001b[39m=\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,\n\u001b[0;32m      9\u001b[0m                 out: Optional[torch\u001b[39m.\u001b[39mTensor] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m     10\u001b[0m                 dim_size: Optional[\u001b[39mint\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m torch\u001b[39m.\u001b[39mTensor:\n\u001b[1;32m---> 11\u001b[0m     index \u001b[39m=\u001b[39m broadcast(index, src, dim)\n\u001b[0;32m     12\u001b[0m     \u001b[39mif\u001b[39;00m out \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     13\u001b[0m         size \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(src\u001b[39m.\u001b[39msize())\n",
-            "File \u001b[1;32mc:\\Users\\33646\\Desktop\\ENSAE\\Structured data\\venv\\lib\\site-packages\\torch_scatter\\utils.py:10\u001b[0m, in \u001b[0;36mbroadcast\u001b[1;34m(src, other, dim)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, dim):\n\u001b[0;32m      9\u001b[0m         src \u001b[39m=\u001b[39m src\u001b[39m.\u001b[39munsqueeze(\u001b[39m0\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(src\u001b[39m.\u001b[39mdim(), other\u001b[39m.\u001b[39;49mdim()):\n\u001b[0;32m     11\u001b[0m     src \u001b[39m=\u001b[39m src\u001b[39m.\u001b[39munsqueeze(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m     12\u001b[0m src \u001b[39m=\u001b[39m src\u001b[39m.\u001b[39mexpand(other\u001b[39m.\u001b[39msize())\n",
-            "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'dim'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# pagerank = gdc_pagerank(A, 0.05, 1e-4)\n",
         "# pagerank = torch.from_numpy(pagerank).float().to(device)\n",
@@ -323,20 +330,20 @@
       },
       "outputs": [],
       "source": [
-        "# heat = gdc_heat(A, 3, 10, 1e-4)\n",
-        "# heat = torch.from_numpy(heat).float().to(device)\n",
+        "heat = gdc_heat(A, 3, 10, 1e-4)\n",
+        "heat = torch.from_numpy(heat).float().to(device)\n",
         "\n",
-        "gdc = GDC(diffusion_kwargs = dict(method='heat', t=3))\n",
-        "edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
-        "                                                num_nodes=data.num_nodes, normalization='sym')    \n",
+        "# gdc = GDC(diffusion_kwargs = dict(method='heat', t=3))\n",
+        "# edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
+        "#                                                 num_nodes=data.num_nodes, normalization='sym')    \n",
         "\n",
-        "trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
-        "trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
+        "# trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
+        "# trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
         "\n",
-        "trans_matrix.fill_diagonal_(1)\n",
-        "heat = trans_matrix.to(device)\n",
+        "# trans_matrix.fill_diagonal_(1)\n",
+        "# heat = trans_matrix.to(device)\n",
         "\n",
-        "args['trans_matrix'] = heat"
+        "args['trans_matrix'] = heat + torch.eye(A.shape[0]).to(device)"
       ]
     },
     {
@@ -378,7 +385,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
         "plt.plot(accuracy_dict['Lsym'], label='Lsym')\n",
         "plt.plot(accuracy_dict['Lrw'], label='Lrw')\n",
         "plt.plot(accuracy_dict['pagerank'], label='pagerank')\n",
@@ -386,7 +392,8 @@
         "plt.legend()\n",
         "plt.xlabel('Epochs')\n",
         "plt.ylabel('Accuracy')\n",
-        "plt.title('Accuracy vs Epochs')"
+        "# plt.title('Accuracy vs Epochs')\n",
+        "plt.show()"
       ]
     },
     {
@@ -454,7 +461,7 @@
       "source": [
         "Lsym = compute_Lsym(A)\n",
         "Lsym = torch.from_numpy(Lsym).float().to(device)\n",
-        "args['trans_matrix'] = Lsym"
+        "args['trans_matrix'] = Lsym + torch.eye(A.shape[0]).to(device)"
       ]
     },
     {
@@ -497,18 +504,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# pagerank = gdc_pagerank(A, 0.05, 1e-4)\n",
-        "# pagerank = torch.from_numpy(pagerank).float().to(device)\n",
+        "pagerank = gdc_pagerank(A, 0.05, 1e-4)\n",
+        "pagerank = torch.from_numpy(pagerank).float().to(device)\n",
         "\n",
-        "gdc = GDC(diffusion_kwargs = dict(method='ppr', alpha=0.15))\n",
-        "edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
-        "                                                num_nodes=data.num_nodes, normalization='sym')    \n",
-        "trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
-        "trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
+        "# gdc = GDC(diffusion_kwargs = dict(method='ppr', alpha=0.15))\n",
+        "# edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
+        "#                                                 num_nodes=data.num_nodes, normalization='sym')    \n",
+        "# trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
+        "# trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
         "\n",
-        "trans_matrix.fill_diagonal_(1)\n",
-        "pagerank = trans_matrix.to(device)\n",
-        "args['trans_matrix'] = pagerank\n",
+        "# trans_matrix.fill_diagonal_(1)\n",
+        "# pagerank = trans_matrix.to(device)\n",
+        "\n",
+        "args['trans_matrix'] = pagerank + torch.eye(A.shape[0]).to(device)\n",
         "\n",
         "model = GCN_Classifier(input_dim=dataset.num_features,\n",
         "                       hidden_dim=args['hidden_dim'],\n",
@@ -545,20 +553,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# heat = gdc_heat(A, 3, 10, 1e-4)\n",
-        "# heat = torch.from_numpy(heat).float().to(device)\n",
+        "heat = gdc_heat(A, 3, 10, 1e-4)\n",
+        "heat = torch.from_numpy(heat).float().to(device)\n",
         "\n",
-        "gdc = GDC(diffusion_kwargs = dict(method='heat', t=3))\n",
-        "edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
-        "                                                num_nodes=data.num_nodes, normalization='sym')    \n",
+        "# gdc = GDC(diffusion_kwargs = dict(method='heat', t=3))\n",
+        "# edge_index, edge_weight = gdc.transition_matrix(edge_index=data.edge_index, edge_weight=data.edge_weight,\n",
+        "#                                                 num_nodes=data.num_nodes, normalization='sym')    \n",
         "\n",
-        "trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
-        "trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
+        "# trans_matrix = torch.zeros((data.num_nodes, data.num_nodes)).to(device)\n",
+        "# trans_matrix[edge_index[0], edge_index[1]] = edge_weight\n",
         "\n",
-        "trans_matrix.fill_diagonal_(1)\n",
-        "heat = trans_matrix.to(device)\n",
+        "# trans_matrix.fill_diagonal_(1)\n",
+        "# heat = trans_matrix.to(device)\n",
         "\n",
-        "args['trans_matrix'] = heat\n",
+        "args['trans_matrix'] = heat + torch.eye(A.shape[0]).to(device)\n",
         "\n",
         "model = GCN_Classifier(input_dim=dataset.num_features,\n",
         "                       hidden_dim=args['hidden_dim'],\n",
@@ -593,7 +601,7 @@
         "plt.legend()\n",
         "plt.xlabel('Epochs')\n",
         "plt.ylabel('Test Accuracy')\n",
-        "plt.title('performance vs transition Matrix')\n",
+        "# plt.title('performance vs transition Matrix')\n",
         "plt.show()"
       ]
     }
